operator/pkg/gateway-api/testdata/gateway/httproute-invalid-reference-grant/output/httproute-reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: reference-grant
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - name: web-backend
      namespace: gateway-conformance-web-backend
      port: 8080
status:
  parents:
  - conditions:
    - lastTransitionTime: "2025-07-01T14:19:43Z"
      message: Accepted HTTPRoute
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-07-01T14:19:43Z"
      message: Cross namespace references are not allowed
      reason: RefNotPermitted
      status: "False"
      type: ResolvedRefs
    controllerName: io.cilium/gateway-controller
    parentRef:
      name: same-namespace
